--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   },
   "author": "",
   "license": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DecentralizedIT/gladius"
+  },
   "dependencies": {
     "truffle": "^3.4.9",
     "web3": "^1.0.0-beta.18"
