--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/DecentralizedIT/gladius"
   },
   "dependencies": {
+    "bignumber.js": "^4.1.0",
     "truffle": "^3.4.11",
     "web3": "^1.0.0-beta.22"
   },
